# google-gemini-rs

./: Cargo.toml  README.md  Releases.md
src/: lib.rs
src/client/: mod.rs
src/google/: common.rs  mod.rs  request.rs  response.rs
tests/: mcp.rs
