[package]
name = "google-gemini-rs"
description = "A simple unofficial Rust wrapper around the Google Gemini API."
license = "MIT"
version = "0.4.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
file-format = "0.27"
enum-iterator = "2"
reqwest = {version = "0.12", default-features = false, features = ["json", "rustls-tls"]}
rust-mcp-sdk = "0.5"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenv = "0.15"
axum-server = { version = "0.7", features = [] }